--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Farm Direct is a web application that facilitates direct connections between buyers and farmers, utilizing IoT and blockchain technology to ensure transparency and efficiency in the agricultural supply chain." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <meta name="google-site-verification" content="GSSuRD0tVmxiW1O24UAJQ_vHfp4_-XL58khU64d33n0" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
   <title>Farm Direct</title>
